apps/minio/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3-route
spec:
  parentRefs:
  - name: minio-gateway
  hostnames:
  - "*.s3.krabi.local"
  rules:
  - backendRefs:
    - name: minio
      port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-route
spec:
  parentRefs:
  - name: minio-gateway
  hostnames:
  - "minio.krabi.local"
  rules:
  - backendRefs:
    - name: minio
      port: 9001
